2019-04-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Accept angle (value with angle unit or value >= 1 and < 360) in nextlunarphase()

2019-04-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix removal of default angle unit from trigonometric functions in output when factor is one

2019-04-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix automatic conversion to Newton
	* Fix display of fraction in exact decimal fraction mode when indicate repeating decimals is active (in GUI)
	* Fix display of repeating decimals (do not add additional whitespace when Unicode is off)
	* Fix x^2=25m^2 where x>0 (was evaluated as false), and similar in exact mode

2019-04-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault with empty sin() or sinh() in equation

2019-04-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault when running qalc in non-interactive mode and gnuplot is missing (issue #184)

2019-04-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix nextlunarphase(), for values > 0.8 and < 0.2 (issue #183)

2019-03-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault during calculation of atan(acos(x)), atan(asin(x)), and asin(atan(x)) when angle unit is deg or gra

2019-03-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix order of prime factors

2019-03-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add persistent parameter, with default true value if qalc is started in non-interactive mode (avoids immediate closing of plot window), to plot() function

2019-02-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix max decimals option for intervals displayed with significant digits (was used as both max and min)

2019-02-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "Number of decimals" and "Round halfway to even" (default away from zero) arguments to round() function

2019-02-15 Hanna Knutsson <hanna.knutsson@protonmail.com>
